feat(core-model): 对象映射引擎可插拔化，默认切换 MethodHandle 引擎
  - 新增 FunObjectMapper 抽象与 MethodHandle/Orika 双引擎，MapperFacadeUtil 委托之
  - 配置 fun.mapper.engine 切换引擎，默认 method-handle，子项目可注册 bean 覆盖
  - 新增 fun-framework-proxy-method-handle 模块提供 @ProxyField 脱敏 hook
  - PageDTO 移除 orika 编译依赖，删除 convert(Class,Class,MapperFacade)
  - 默认引擎走 public getter/setter，JDK21 下无需 --add-opens
  - 同步 java脚手架.md 及各 README